add my destinations

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,16 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#lahore {
+    background-color: #800000;
+}
+
+
+#dallas {
+    background-color: #800000;
+}
+
+#london {
+    background-color: #800000;
+}
